# raster_mapping

./: .gitignore  Cargo.toml  README.md
data/: data1.asc  data2.asc  data3.asc  data4.asc  result.asc  result_qgis.asc
src/: lib.rs
